@@ -1,3 +1,8 @@
+2011-05-07  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* dbfopen.c: Ensure pending record is flushed when adding a native
+	field (gdal #4073).
+
 2011-04-16  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* shapefil.h: avoid warnings with SHP_CVSID on gcc.
